documentation layout added

--- a/badges.html
+++ b/badges.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div class="Header">
+        <h1>Lunatic UI</h1>
+        <h2>Component Library Documentation</h2>
+    </div>
     <div class="display-grid">
         <div class="side-bar  side-bar-display">
             <a href="./cards.html">Cards</a>
