--- a/buttons.html
+++ b/buttons.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <div class="Header">
+        <h1>Lunatic UI</h1>
+        <h2>Component Library Documentation</h2>
+    </div>
     <div class="display-grid">
         <div class="side-bar  side-bar-display">
             <a href="./cards.html">Cards</a>
@@ -23,7 +28,7 @@
             <a href="./carousel.html">Carousel</a>
             <a href="./responsiveimage.html">Responsive Image</a>
         </div>
-        <div class="button-grid">
+        <div class="button-grid button-documentation">
             <div>
                 <button class=" button-container-button primary-button">Primary</button>
             </div>
@@ -91,6 +96,7 @@
             </iframe>
         </div>
     </div>
+
 
 
     <script src="button.js"></script>
