--- a/inputs.html
+++ b/inputs.html
@@ -11,61 +11,66 @@
 </head>
 
 <body>
-    <div class="display-layout display-grid">
-        <div class="side-bar  side-bar-display">
-            <a href="./cards.html">Cards</a>
-            <a href="./avatar.html">Avatar</a>
-            <a href="./badges.html">Badges</a>
-            <a href="./buttons.html">Buttons</a>
-            <a href="./snackbar.html">Snackbar</a>
-            <a href="./alerts.html">Alert</a>
-            <a href="./inputs.html">Inputs</a>
-            <a href="./carousel.html">Carousel</a>
-
-            <a href="./responsiveimage.html">Responsive Image</a>
+    <div class="documentation-layout">
+        <div class="Header">
+            <h1>Lunatic UI</h1>
+            <h2>Component Library Documentation</h2>
         </div>
-        <div class="display-layout">
-            <div>
-                <label for="user-input" class="input-label">Input</label>
-                <input type="text" placeholder="Enter valid email address" name="user-input" id="user-input">
+        <div class=" display-grid">
+            <div class="side-bar  side-bar-display">
+                <a href="./cards.html">Cards</a>
+                <a href="./avatar.html">Avatar</a>
+                <a href="./badges.html">Badges</a>
+                <a href="./buttons.html">Buttons</a>
+                <a href="./snackbar.html">Snackbar</a>
+                <a href="./alerts.html">Alert</a>
+                <a href="./inputs.html">Inputs</a>
+                <a href="./carousel.html">Carousel</a>
+                <a href="./responsiveimage.html">Responsive Image</a>
             </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-input%2522%2520class%253D%2522input-label%2522%253EInput%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522text%2522%2520placeholder%253D%2522Enter%2520valid%2520email%2520address%2522%2520name%253D%2522user-input%2522%2520id%253D%2522user-input%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 1024px; height: 279px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-            <div>
-                <label for="user-input" class="input-label">Input</label>
-                <input type="text" placeholder="Enter valid email address" name="user-input" id="user-input"
-                    class="user-input-warning">
-            </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-input%2522%2520class%253D%2522input-label%2522%253EInput%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522text%2522%2520placeholder%253D%2522Enter%2520valid%2520email%2520address%2522%2520name%253D%2522user-input%2522%2520id%253D%2522user-input%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520class%253D%2522user-input-warning%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 1024px; height: 298px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
+            <div class="display-layout">
+                <div>
+                    <label for="user-input" class="input-label">Input</label>
+                    <input type="text" placeholder="Enter valid email address" name="user-input" id="user-input">
+                </div>
+                <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-input%2522%2520class%253D%2522input-label%2522%253EInput%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522text%2522%2520placeholder%253D%2522Enter%2520valid%2520email%2520address%2522%2520name%253D%2522user-input%2522%2520id%253D%2522user-input%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
+                    style="width: 1024px; height: 279px; border:0; transform: scale(1); overflow:hidden;"
+                    sandbox="allow-scripts allow-same-origin">
+                </iframe>
+                <div>
+                    <label for="user-input" class="input-label">Input</label>
+                    <input type="text" placeholder="Enter valid email address" name="user-input" id="user-input"
+                        class="user-input-warning">
+                </div>
+                <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-input%2522%2520class%253D%2522input-label%2522%253EInput%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522text%2522%2520placeholder%253D%2522Enter%2520valid%2520email%2520address%2522%2520name%253D%2522user-input%2522%2520id%253D%2522user-input%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520class%253D%2522user-input-warning%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
+                    style="width: 1024px; height: 298px; border:0; transform: scale(1); overflow:hidden;"
+                    sandbox="allow-scripts allow-same-origin">
+                </iframe>
 
-            <div>
-                <label for="user-choice-radio" class="user-radio">Radio</label>
-                <input type="radio" name="user-choice-radio" id="user-choice-radio">
+                <div>
+                    <label for="user-choice-radio" class="user-radio">Radio</label>
+                    <input type="radio" name="user-choice-radio" id="user-choice-radio">
 
-                <input type="radio" name="user-choice-radio" id="user-choice-radio">
+                    <input type="radio" name="user-choice-radio" id="user-choice-radio">
+                </div>
+                <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-choice-radio%2522%2520class%253D%2522user-radio%2522%253ERadio%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522radio%2522%2520name%253D%2522user-choice-radio%2522%2520id%253D%2522user-choice-radio%2522%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522radio%2522%2520name%253D%2522user-choice-radio%2522%2520id%253D%2522user-choice-radio%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
+                    style="width: 825px; height: 298px; border:0; transform: scale(1); overflow:hidden;"
+                    sandbox="allow-scripts allow-same-origin">
+                </iframe>
+                <div>
+                    <label for="user-choice-check" class="user-checkbox">Options</label>
+                    <input type="checkbox" name="user-choice-check" id="user-choice-check">
+                    <input type="checkbox" name="user-choice-check" id="user-choice-check">
+                </div>
+                <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-choice-check%2522%2520class%253D%2522user-checkbox%2522%253EOptions%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522checkbox%2522%2520name%253D%2522user-choice-check%2522%2520id%253D%2522user-choice-check%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522checkbox%2522%2520name%253D%2522user-choice-check%2522%2520id%253D%2522user-choice-check%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
+                    style="width: 850px; height: 279px; border:0; transform: scale(1); overflow:hidden;"
+                    sandbox="allow-scripts allow-same-origin">
+                </iframe>
             </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-choice-radio%2522%2520class%253D%2522user-radio%2522%253ERadio%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522radio%2522%2520name%253D%2522user-choice-radio%2522%2520id%253D%2522user-choice-radio%2522%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522radio%2522%2520name%253D%2522user-choice-radio%2522%2520id%253D%2522user-choice-radio%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 825px; height: 298px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-            <div>
-                <label for="user-choice-check" class="user-checkbox">Options</label>
-                <input type="checkbox" name="user-choice-check" id="user-choice-check">
-                <input type="checkbox" name="user-choice-check" id="user-choice-check">
-            </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Clabel%2520for%253D%2522user-choice-check%2522%2520class%253D%2522user-checkbox%2522%253EOptions%253C%252Flabel%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522checkbox%2522%2520name%253D%2522user-choice-check%2522%2520id%253D%2522user-choice-check%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cinput%2520type%253D%2522checkbox%2522%2520name%253D%2522user-choice-check%2522%2520id%253D%2522user-choice-check%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 850px; height: 279px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
         </div>
     </div>
 </body>
