--- a/responsiveimage.html
+++ b/responsiveimage.html
@@ -11,37 +11,42 @@
 </head>
 
 <body>
-    <div class="side-bar side-bar-display">
-        <a href="./cards.html">Cards</a>
-        <a href="./avatar.html">Avatar</a>
-        <a href="./badges.html">Badges</a>
-        <a href="./buttons.html">Buttons</a>
-        <a href="./snackbar.html">Snackbar</a>
-        <a href="./alerts.html">Alert</a>
-        <a href="./inputs.html">Inputs</a>
-        <a href="./carousel.html">Carousel</a>
-        <a href="./snackbar.html"></a>
-        <a href="./responsiveimage.html"></a>
+    <div class="Header">
+        <h1>Lunatic UI</h1>
+        <h2>Component Library Documentation</h2>
     </div>
-    <div class="display-layout">
-        <div class="responsive-image ">
-            <img src="/Images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
-
+    <div class="display-grid">
+        <div class="side-bar side-bar-display">
+            <a href="./cards.html">Cards</a>
+            <a href="./avatar.html">Avatar</a>
+            <a href="./badges.html">Badges</a>
+            <a href="./buttons.html">Buttons</a>
+            <a href="./snackbar.html">Snackbar</a>
+            <a href="./alerts.html">Alert</a>
+            <a href="./inputs.html">Inputs</a>
+            <a href="./carousel.html">Carousel</a>
+            <a href="./responsiveimage.html">Responsive Image</a>
         </div>
-        <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522responsive-image%2520%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252FImages%252Fdaniil-onischenko-uFSZldf9xeM-unsplash.jpg%2522%2520%252F%253E%250A%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
-            style="width: 414px; height: 298px; border:0; transform: scale(1); overflow:hidden;"
-            sandbox="allow-scripts allow-same-origin">
-        </iframe>
-        <div class="round-image-responsive">
-            <img src="/Images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
+        <div class="display-layout">
+            <div class="responsive-image ">
+                <img src="/Images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
 
+            </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522responsive-image%2520%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252FImages%252Fdaniil-onischenko-uFSZldf9xeM-unsplash.jpg%2522%2520%252F%253E%250A%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
+                style="width: 414px; height: 298px; border:0; transform: scale(1); overflow:hidden;"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
+            <div class="round-image-responsive">
+                <img src="/Images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
+
+            </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522round-image-responsive%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252FImages%252Fdaniil-onischenko-uFSZldf9xeM-unsplash.jpg%2522%2520%252F%253E%250A%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
+                style="width: 414px; height: 316px; border:0; transform: scale(1); overflow:hidden;"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
         </div>
-        <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%2870%2C74%2C78%2C1%29&t=one-dark&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522round-image-responsive%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522%252FImages%252Fdaniil-onischenko-uFSZldf9xeM-unsplash.jpg%2522%2520%252F%253E%250A%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
-            style="width: 414px; height: 316px; border:0; transform: scale(1); overflow:hidden;"
-            sandbox="allow-scripts allow-same-origin">
-        </iframe>
     </div>
 </body>
 
