--- a/snackbar.html
+++ b/snackbar.html
@@ -13,6 +13,10 @@
 
 <body>
     <div class="display-grid">
+        <div class="Header">
+            <h1>Lunatic UI</h1>
+            <h2>Component Library Documentation</h2>
+        </div>
         <div class="side-bar side-bar-display">
             <a href="./cards.html">Cards</a>
             <a href="./avatar.html">Avatar</a>
@@ -22,7 +26,7 @@
             <a href="./alerts.html">Alert</a>
             <a href="./inputs.html">Inputs</a>
             <a href="./carousel.html">Carousel</a>
-            <a href="./snackbar.html"></a>
+            <a href="./snackbar.html">Responsive Image</a>
         </div>
         <div class="display-layout">
             <div class="snackbar">
