carousel layout fixed

--- a/alerts.html
+++ b/alerts.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
+    <div class="Header">
+        <h1>Lunatic UI</h1>
+        <h2>Component Library Documentation</h2>
+    </div>
     <div class="display-grid">
-        <div class="side-bar">
+        <div class="side-bar side-bar-display">
             <a href="./cards.html">Cards</a>
             <a href="./avatar.html">Avatar</a>
             <a href="./badges.html">Badges</a>
@@ -21,7 +25,7 @@
             <a href="./alerts.html">Alert</a>
             <a href="./inputs.html">Inputs</a>
             <a href="./carousel.html">Carousel</a>
-            <a href="./snackbar.html"></a>
+            <a href="./responsiveimage.html">Responsive Image</a>
         </div>
         <div class="display-layout">
             <div class="alert alert-info">
