--- a/carousel.html
+++ b/carousel.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
+    <div class="Header">
+        <h1>Lunatic UI</h1>
+        <h2>Component Library Documentation</h2>
+    </div>
     <div class="display-grid">
         <div class="side-bar  side-bar-display">
             <a href="./cards.html">Cards</a>
