--- a/cards.html
+++ b/cards.html
@@ -13,12 +13,12 @@
     <div class="card-component">
         <div class="card-horizontal card-margin">
             <div class="img-container horizontal">
-                <img src="https://images.unsplash.com/photo-1513789181297-6f2ec112c0bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80"
+                <img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/16045848/2021/12/13/c42ef067-9fbe-4077-a48c-fca6331796ab1639383810735-Nike-Court-Vision-Low-Mens-Shoes-7251639383810387-1.jpg"
                     class="card-img  img-horizontal" />
             </div>
             <div class="card-data">
                 <div class="card-header">
-                    <h3 class="card-title">Scott International</h3>
+                    <h3 class="card-title">Puma Court Royale</h3>
                 </div>
                 <div class="card-content">
                     <p class="card-body">
@@ -33,11 +33,11 @@
                     <b class="discount-price">24% OFF</b>
                 </div>
                 <div class="btn-container-horizontal">
-                    <button class=" button-container primary-button">Primary</button>
+                    <button class=" button-container-card primary-button">Primary</button>
 
                 </div>
                 <div class="btn-container-horizontal">
-                    <button class=" button-container secondary-button">Secondary</button>
+                    <button class=" button-container-card secondary-button">Secondary</button>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
                 <b class="discount-price">24% OFF</b>
             </div>
             <div class="card-button">
-                <button class="button-container primary-button cart">Add To Cart</button>
+                <button class="button-container-card primary-button cart">Add To Cart</button>
             </div>
             <button class="exit-button">
                 <span>&#10060;</span>
@@ -123,7 +123,7 @@
                 </del>
                 <b class="discount-price">24% OFF</b>
                 <div class="button">
-                    <button class="button-container primary-button">Whishlist</button>
+                    <button class="button-container-card primary-button">Whishlist</button>
                 </div>
 
             </div>
