--- a/cards.html
+++ b/cards.html
@@ -31,12 +31,12 @@
         <div class="card-component display-layout">
             <div class="card-horizontal card-margin">
                 <div class="img-container horizontal">
-                    <img src="https://images.unsplash.com/photo-1513789181297-6f2ec112c0bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80"
+                    <img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/16045848/2021/12/13/c42ef067-9fbe-4077-a48c-fca6331796ab1639383810735-Nike-Court-Vision-Low-Mens-Shoes-7251639383810387-1.jpg"
                         class="card-img  img-horizontal" />
                 </div>
                 <div class="card-data">
                     <div class="card-header">
-                        <h3 class="card-title">Scott International</h3>
+                        <h3 class="card-title">Puma Court Royale</h3>
                     </div>
                     <div class="card-content">
                         <p class="card-body">
@@ -121,9 +121,9 @@
                     <div class="top-3">
                         <h3>READ</h3>
                         <h3>BOOKMARK</h3>
-                        <img src="./images/icons8-favourite-32.png" />
-                        <img src="./images/icons8-share-24.png" />
-                        <img src="./images/icons8-menu-vertical-24.png" />
+                        <img src="/Images/icons8-favourite-32.png" />
+                        <img src="/Images/icons8-share-24.png" />
+                        <img src="/Images/icons8-menu-vertical-24.png" />
                     </div>
 
                 </div>
